# wgpu-vsbm

./: Cargo.toml  create-vulkan-api-dumps  extract-frame9  sha256-miner-d32.wgsl
result/vsbm/logs/: create-vulkan-api-dumps  extract-frame
src/: lib.rs  main.rs  sha256-miner.wgsl  vsbm.wgsl
