[package]
name = "wgpu-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
#wgpu = { path = "/mnt/nvme/open-source/wgpu/wgpu" }
anyhow = "1.0.101"
pollster = "0.4.0"
winit = "0.30.12"
bytemuck = "1.25.0"
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
sha2 = "0.10.9"
num-format = "0.4.4"
hex = "0.4.3"